# validation-service-fhir-r4

./: .flake8  .gitallowed  .gitignore  .gitmodules  .grype.yaml  .pre-commit-config.yaml  .tool-versions  .trivyignore  Dockerfile  Dockerfile-CI  Makefile  README.md  aws-repo-notes.txt  docker-compose.yml  makefile  pom.xml  pyproject.toml  sonar-project.properties  trivy.yaml  zizmor.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: FHIR-Validation.yml  continuous-integration.yml  merge_to_main.yml  pull_request.yml  quality_checks.yml  sync_copilot.yml
cloudformation/: IOPSValidation.yaml
cloudfront/: IOPSValidation.yaml
licenses/: allowedMissingLicense.xml  licenses.xml
scripts/: download-dependencies.sh  download-latest-dependencies.sh  download_dependencies.py  update_manifest.py
src/main/kotlin/com/example/fhirvalidator/: AppProperties.kt  ApplicationConfiguration.kt  FhirValidatorApplication.kt  Handler.kt  ImplementationGuideParser.kt  ImplementationGuideParserAlt.kt  MessageDefinitionApplier.kt  SimplifierPackageVersionListing.kt  ValidateController.kt  ValidationConfiguration.kt
src/main/kotlin/software/nhs/fhirvalidator/: FhirValidatorApplication.kt
src/main/resources/: UK.Core.r4-1.2.0.tgz  UK.DM.r4-0.0.18-dev.tgz  UK.Spine.r4-0.0.3-dev.tgz  application.properties  application.yaml  example-validation.json  log4j2.xml  logback-spring.xml  manifest.json  manifest.next.json  message.properties  validation.json
src/main/resources/Examples/: Bundle-message.json  Encounter-ADTA03.json  Patient-PDS.json
src/test/resources/: application.properties  manifest.json  primerPayload.json
src/test/resources/FHIRExamples/: MedicationRequest-bothMedicationReferenceAndCodeableConcept.json  MedicationRequest-missingSNOMEDMedcation.xml  dispense-1st-event-with-dispenser.json  homecare-continuous-example.json
(+186 files in other folders)
