[project]
python = "^3.14"
name = "validation-service-fhir-r4"

[tool.poetry]
name = "validation-service-fhir-r4"
version = "0.0.1-alpha"
description = "Validation Service FHIR R4 API Definitions"
license = "MIT"
authors = [
    "EPS"
]
readme = "README.md"
repository = "https://github.com/NHSDigital/validation-service-fhir-r4"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
semver = "^3.0.4"
gitpython = "^3.1.44"
pre-commit = "^3.5.0"
flake8 = "^7.3.0"

[tool.poetry.group.dev.dependencies]
requests = "2.32.3"

[tool.poetry.scripts]
