[project]
name = "validation-service-fhir-r4"
description = "Validation Service FHIR R4 API Definitions"
version = "0.0.1-alpha"
license = "MIT"
authors = [
    { name = "EPS" }
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
    "semver (>=3.0.4,<4.0.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[project.urls]
repository = "https://github.com/NHSDigital/validation-service-fhir-r4"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
requests = "2.32.5"

[tool.poetry.scripts]
